<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/total_stats_dest">

    <fragment
        android:id="@+id/total_stats_dest"
        android:name="com.aceinteract.topcoder.covidstats.ui.main.generalstats.TotalStatsFragment"
        android:label="@string/title_total_stats"
        tools:layout="@layout/total_stats_fragment" />

    <fragment
        android:id="@+id/region_stats_dest"
        android:name="com.aceinteract.topcoder.covidstats.ui.main.countrystats.CountryStatsFragment"
        android:label="@string/title_region_stats"
        tools:layout="@layout/country_stats_fragment" />

    <fragment
        android:id="@+id/covid_map_dest"
        android:name="com.aceinteract.topcoder.covidstats.ui.main.map.CovidMapFragment"
        android:label="@string/title_covid_map"
        tools:layout="@layout/covid_map_fragment" />

</navigation>