<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.generalstats.TotalStatsFragment">

    <ScrollView
        android:id="@+id/layout_content"
        tools:visibility="visible"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/list_item_padding_horizontal"
            android:paddingTop="@dimen/frame_padding_vertical"
            android:paddingEnd="@dimen/list_item_padding_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_last_updated"
                android:textAppearance="@style/TextAppearance.Subtitle.Small" />

            <TextView
                android:id="@+id/text_last_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_item_spacing"
                android:textAppearance="@style/TextAppearance.Body"
                tools:text="May, 17 2020, 18:59, UTC" />

            <com.google.android.material.card.MaterialCardView
                style="@style/CardView.Default"
                android:layout_marginBottom="@dimen/list_item_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:paddingStart="@dimen/frame_padding_horizontal"
                    android:paddingTop="@dimen/list_item_padding_vertical"
                    android:paddingEnd="@dimen/frame_padding_horizontal"
                    android:paddingBottom="@dimen/list_item_padding_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image_total_cases"
                        android:layout_width="48dp"
                        android:layout_height="0dp"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_clipboard_list"
                        app:tint="@color/color_accent" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/image_total_cases"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_total_cases"
                            android:textAppearance="@style/TextAppearance.Subtitle" />

                        <TextView
                            android:id="@+id/text_total_cases"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.Large.Highlight"
                            android:textColor="@color/color_accent"
                            tools:text="3,846,504" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>
            <com.aceinteract.topcoder.covidstats.view.PieChartView
                android:id="@+id/pie_general_stats"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pie_chart_size"
                android:layout_marginBottom="@dimen/list_item_spacing"
                app:strokeSize="24dp" />

            <com.google.android.material.card.MaterialCardView
                style="@style/CardView.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:paddingStart="@dimen/frame_padding_horizontal"
                    android:paddingTop="@dimen/list_item_padding_vertical"
                    android:paddingEnd="@dimen/frame_padding_horizontal"
                    android:paddingBottom="@dimen/list_item_padding_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image_infected"
                        android:layout_width="48dp"
                        android:layout_height="0dp"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_biohazard"
                        app:tint="@color/color_warning" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/image_infected"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_infected"
                            android:textAppearance="@style/TextAppearance.Subtitle" />

                        <TextView
                            android:id="@+id/text_infected"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.Large.Highlight"
                            android:textColor="@color/color_warning"
                            tools:text="2,264,911" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/CardView.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:paddingStart="@dimen/frame_padding_horizontal"
                    android:paddingTop="@dimen/list_item_padding_vertical"
                    android:paddingEnd="@dimen/frame_padding_horizontal"
                    android:paddingBottom="@dimen/list_item_padding_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image_recovered"
                        android:layout_width="48dp"
                        android:layout_height="0dp"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_heartbeat"
                        app:tint="@color/color_good" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/image_recovered"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_recovered"
                            android:textAppearance="@style/TextAppearance.Subtitle" />

                        <TextView
                            android:id="@+id/text_recovered"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.Large.Highlight"
                            android:textColor="@color/color_good"
                            tools:text="1,315,718" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/CardView.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:paddingStart="@dimen/frame_padding_horizontal"
                    android:paddingTop="@dimen/list_item_padding_vertical"
                    android:paddingEnd="@dimen/frame_padding_horizontal"
                    android:paddingBottom="@dimen/list_item_padding_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image_deaths"
                        android:layout_width="48dp"
                        android:layout_height="0dp"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_skull_crossbones"
                        app:tint="@color/color_danger" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/image_deaths"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_deaths"
                            android:textAppearance="@style/TextAppearance.Subtitle" />

                        <TextView
                            android:id="@+id/text_deaths"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.Large.Highlight"
                            android:textColor="@color/color_danger"
                            tools:text="265,875" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_loader"
        android:gravity="center"
        android:padding="@dimen/loader_padding"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_progress_status"
            android:layout_marginBottom="@dimen/list_item_spacing"
            android:text="@string/status_fetching_total_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/progress_loader"
            android:indeterminate="true"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_refresh_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/color_accent"
        app:srcCompat="@drawable/ic_refresh"
        app:tint="@android:color/white" />

</FrameLayout>